syntax = "proto3";

package domain;

message DeviceActivated {
    string deviceId = 1;
    string customerId = 2;
}

message RoomAssigned {
    string deviceId = 1;
    string room = 2;
}

message NightlightToggled {
    string deviceId = 1;
    bool nightlightOn = 2;
}
