syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "cloudstate/entity_key.proto";

package wirelessmesh;

message ActivateDeviceCommand {
    string deviceId = 1 [(.cloudstate.entity_key) = true];
    string customerId = 2;
}

message AssignRoomCommand {
    string deviceId = 1 [(.cloudstate.entity_key) = true];
    string room = 2;
}

message Device {
    string deviceId = 1;
    bool activated = 2;
    string customerId = 3;
    string room = 4;
    bool nightlightOn = 5;
}

message GetDeviceCommand {
    string deviceId = 1 [(.cloudstate.entity_key) = true];
}

message ToggleNightlightCommand {
    string deviceId = 1 [(.cloudstate.entity_key) = true];
}

service WirelessmeshService {
    rpc ActivateDevice(ActivateDeviceCommand) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/wirelessmesh/activate-device",
            body: "*",
        };
    }

    rpc AssignRoom(AssignRoomCommand) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/wirelessmesh/assign-room",
            body: "*",
        };
    }

    rpc GetDevice(GetDeviceCommand) returns (Device) {
        option (google.api.http) = {
            get: "/wirelessmesh/get-device",
            body: "*",
        };
    }

    rpc ToggleNightlight(ToggleNightlightCommand) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/wirelessmesh/toggle-nightlight",
            body: "*",
        };
    }
}
